# data-quality-project

./: README.md  mkdocs.yml  pyproject.toml
exemplo/: exemplo_pandera01.py  exemplo_pydantic01.py  exemplo_pydantic02.py
tests/: test_funcao_ola.py
